--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -28,6 +28,22 @@
     text-decoration: none;
     font-weight: 700;
 }
+
+.navegacion a,
+.copy {
+    color: var(--white);
+    font-size: 2.2rem;
+    text-decoration: none;
+    font-weight: 500;
+}
 .copyright {
     text-align: center;
+}
+
+.copy {
+    text-align: center;
+}
+
+.span{
+    color: var(--primary);
 }
