--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -7,7 +7,7 @@
 }
 .contenido h3 {
     font-weight: 900;
-    font-size: 2.8rem;
+    font-size: 2.2rem;
     margin: 0;
 }
 .fecha {
@@ -19,6 +19,7 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
     overflow: hidden;
+    color: #fff;
 }
 .texto {
     white-space: pre-wrap;
@@ -32,7 +33,7 @@
 .enlace {
     margin-top: 2rem;
     display: block;
-    background-color: var(--black);
+    background-color: var(--boton);
     color: var(--white);
     text-decoration: none;
     padding: 1rem;
@@ -42,6 +43,7 @@
     font-weight: 700;
     transition-property: background-color;
     transition-duration: 300ms;
+    border-radius: 0.6rem;
 }
 .enlace:hover {
     background-color: var(--primary);
