--- a/styles/chemas.module.css
+++ b/styles/chemas.module.css
@@ -6,31 +6,42 @@
     max-width: 70rem;
     margin: 0 auto;
 }
+
 .contenido {
     padding: 1rem;
+    /* background-color: rgb(42, 42, 67); */
+    background-color: #26292B;
+    /* box-shadow: 0 0 10px rgba(104, 108, 142, 0.3);  generamos una sombre al rededor */
 }
+
+.ver {
+    padding: 1rem;
+    background-color: rgb(42, 42, 67);
+    box-shadow: 0 0 10px rgba(104, 108, 142, 0.3); 
+}
+
 .contenido h3 {
-    font-size: 3rem;
+    font-size: 2.3rem;
     text-transform: uppercase;
     color: var(--primary);
+    margin: 10px;   
 }
 .descripcion {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 6;
+    margin: 0px;
     overflow: hidden;
     font-size: 1.8rem;
+    color: white;
 }
 .precio {
     color: var(--primary);
-    font-size: 4rem;
+    font-size: 3rem;
     margin: 0;
-    font-weight: 900;
+    font-weight: 700;
 }
 .enlace {
-    margin-top: 2rem;
+    margin-top: 1rem;
     display: block;
-    background-color: var(--black);
+    background-color: var(--boton);
     color: var(--white);
     text-decoration: none;
     padding: 1rem;
@@ -40,7 +51,13 @@
     font-weight: 700;
     transition-property: background-color;
     transition-duration: 300ms;
+    border-radius: 0.6rem;
+    
 }
 .enlace:hover {
     background-color: var(--primary);
 }
+
+.img {
+    height: 340px;
+  }
